[gd_scene load_steps=136 format=3 uid="uid://bv3co3tcjuqgx"]

[ext_resource type="Script" uid="uid://bjisn1obrfkhn" path="res://scenes/player/player.gd" id="1_mdl7e"]
[ext_resource type="Texture2D" uid="uid://dutkamcf1shae" path="res://assets/spritesheets/player.png" id="1_p0vlq"]
[ext_resource type="Script" uid="uid://bq0us0ee8mi4e" path="res://scenes/components/movement_component.gd" id="3_qu4a1"]
[ext_resource type="Script" uid="uid://ccfn1s3bwoan5" path="res://scenes/components/input_component.gd" id="4_70d11"]
[ext_resource type="Script" uid="uid://b58a5mkblegvr" path="res://scenes/components/animation_component.gd" id="5_qu4a1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lt3gi"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2016, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_akpgi"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2064, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumhx"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2112, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_100hb"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2160, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7odld"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2208, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_axtmv"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2256, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x32p"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2304, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pusvq"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2352, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qduiv"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2400, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yj0e"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2448, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0jld"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2496, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdclj"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2544, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml80s"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2592, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdgyb"]
atlas = ExtResource("1_p0vlq")
region = Rect2(2640, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvyme"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1344, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_swrsk"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1392, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkfac"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1440, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_unhkg"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1488, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kajp"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1536, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku51j"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1584, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_la8f2"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1632, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oanc2"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1680, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_41lfj"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1728, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nh4m"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1776, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hk6f"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1824, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmxrx"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1872, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvw7q"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1920, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0eor"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1968, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrwhh"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7djh"]
atlas = ExtResource("1_p0vlq")
region = Rect2(48, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx1s8"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_im07a"]
atlas = ExtResource("1_p0vlq")
region = Rect2(144, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsbg5"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uobdy"]
atlas = ExtResource("1_p0vlq")
region = Rect2(240, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv1vf"]
atlas = ExtResource("1_p0vlq")
region = Rect2(288, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2viqe"]
atlas = ExtResource("1_p0vlq")
region = Rect2(336, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjt17"]
atlas = ExtResource("1_p0vlq")
region = Rect2(384, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_27epi"]
atlas = ExtResource("1_p0vlq")
region = Rect2(432, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_84ti5"]
atlas = ExtResource("1_p0vlq")
region = Rect2(480, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_afj6a"]
atlas = ExtResource("1_p0vlq")
region = Rect2(528, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cji5y"]
atlas = ExtResource("1_p0vlq")
region = Rect2(576, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_blnfk"]
atlas = ExtResource("1_p0vlq")
region = Rect2(624, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qabq5"]
atlas = ExtResource("1_p0vlq")
region = Rect2(672, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqny8"]
atlas = ExtResource("1_p0vlq")
region = Rect2(720, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgg3w"]
atlas = ExtResource("1_p0vlq")
region = Rect2(768, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpppk"]
atlas = ExtResource("1_p0vlq")
region = Rect2(816, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm57i"]
atlas = ExtResource("1_p0vlq")
region = Rect2(864, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdlf2"]
atlas = ExtResource("1_p0vlq")
region = Rect2(912, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2ifm"]
atlas = ExtResource("1_p0vlq")
region = Rect2(960, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vqve"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1008, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfjxt"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1056, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5kac"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1104, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qycqj"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1152, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_24r77"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1200, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_07ay5"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1248, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_onyu1"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1296, 1152, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6fml"]
atlas = ExtResource("1_p0vlq")
region = Rect2(864, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3li8b"]
atlas = ExtResource("1_p0vlq")
region = Rect2(912, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("1_p0vlq")
region = Rect2(960, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1008, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1056, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1104, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("1_p0vlq")
region = Rect2(576, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("1_p0vlq")
region = Rect2(624, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("1_p0vlq")
region = Rect2(672, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wef"]
atlas = ExtResource("1_p0vlq")
region = Rect2(720, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("1_p0vlq")
region = Rect2(768, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("1_p0vlq")
region = Rect2(816, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("1_p0vlq")
region = Rect2(48, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfpux"]
atlas = ExtResource("1_p0vlq")
region = Rect2(144, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ith"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwui"]
atlas = ExtResource("1_p0vlq")
region = Rect2(240, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfy4j"]
atlas = ExtResource("1_p0vlq")
region = Rect2(288, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3ic"]
atlas = ExtResource("1_p0vlq")
region = Rect2(336, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8lor"]
atlas = ExtResource("1_p0vlq")
region = Rect2(384, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e537"]
atlas = ExtResource("1_p0vlq")
region = Rect2(432, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07f3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(480, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_viqgg"]
atlas = ExtResource("1_p0vlq")
region = Rect2(528, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpg5x"]
atlas = ExtResource("1_p0vlq")
region = Rect2(864, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3xxp"]
atlas = ExtResource("1_p0vlq")
region = Rect2(912, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_npwbq"]
atlas = ExtResource("1_p0vlq")
region = Rect2(960, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v42im"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1008, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn6s4"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1056, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oing"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1104, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5stf6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(576, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_180ig"]
atlas = ExtResource("1_p0vlq")
region = Rect2(624, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_20koh"]
atlas = ExtResource("1_p0vlq")
region = Rect2(672, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov1oi"]
atlas = ExtResource("1_p0vlq")
region = Rect2(720, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn7t0"]
atlas = ExtResource("1_p0vlq")
region = Rect2(768, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qjgm"]
atlas = ExtResource("1_p0vlq")
region = Rect2(816, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejd4k"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xrq6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(48, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi3ps"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kswpp"]
atlas = ExtResource("1_p0vlq")
region = Rect2(144, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5i4m"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1lr0"]
atlas = ExtResource("1_p0vlq")
region = Rect2(240, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro0t8"]
atlas = ExtResource("1_p0vlq")
region = Rect2(288, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nn5r"]
atlas = ExtResource("1_p0vlq")
region = Rect2(336, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvwax"]
atlas = ExtResource("1_p0vlq")
region = Rect2(384, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3qp0"]
atlas = ExtResource("1_p0vlq")
region = Rect2(432, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_76i7i"]
atlas = ExtResource("1_p0vlq")
region = Rect2(480, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mndc6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(528, 1248, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkxt"]
atlas = ExtResource("1_p0vlq")
region = Rect2(864, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsi7p"]
atlas = ExtResource("1_p0vlq")
region = Rect2(912, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwa"]
atlas = ExtResource("1_p0vlq")
region = Rect2(960, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfeki"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1008, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_axnmu"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1056, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvsjc"]
atlas = ExtResource("1_p0vlq")
region = Rect2(1104, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxdpb"]
atlas = ExtResource("1_p0vlq")
region = Rect2(576, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_agngo"]
atlas = ExtResource("1_p0vlq")
region = Rect2(624, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrixf"]
atlas = ExtResource("1_p0vlq")
region = Rect2(672, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmt83"]
atlas = ExtResource("1_p0vlq")
region = Rect2(720, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4as6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(768, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1r6t"]
atlas = ExtResource("1_p0vlq")
region = Rect2(816, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0asu"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq1a3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(48, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu4mg"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk6la"]
atlas = ExtResource("1_p0vlq")
region = Rect2(144, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrxk4"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg1p0"]
atlas = ExtResource("1_p0vlq")
region = Rect2(240, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2u8p"]
atlas = ExtResource("1_p0vlq")
region = Rect2(288, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv10x"]
atlas = ExtResource("1_p0vlq")
region = Rect2(336, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdxpi"]
atlas = ExtResource("1_p0vlq")
region = Rect2(384, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b437"]
atlas = ExtResource("1_p0vlq")
region = Rect2(432, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nyu3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(480, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_priom"]
atlas = ExtResource("1_p0vlq")
region = Rect2(528, 192, 48, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_lt3gi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt3gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akpgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_100hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7odld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axtmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x32p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pusvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qduiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yj0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0jld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml80s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdgyb")
}],
"loop": false,
"name": &"dodge_down",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvyme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swrsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkfac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unhkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kajp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku51j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la8f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oanc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41lfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nh4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hk6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmxrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvw7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0eor")
}],
"loop": false,
"name": &"dodge_left",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrwhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7djh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im07a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsbg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uobdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv1vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2viqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjt17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27epi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84ti5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afj6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cji5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blnfk")
}],
"loop": false,
"name": &"dodge_right",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qabq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqny8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgg3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpppk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm57i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdlf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2ifm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vqve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfjxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5kac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qycqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24r77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07ay5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onyu1")
}],
"loop": false,
"name": &"dodge_up",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6fml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3li8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdl7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfpux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwui")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfy4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8lor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viqgg")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpg5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3xxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npwbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v42im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn6s4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oing")
}],
"loop": false,
"name": &"interact_down",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5stf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_180ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20koh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov1oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn7t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qjgm")
}],
"loop": false,
"name": &"interact_left",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejd4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xrq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi3ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kswpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5i4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1lr0")
}],
"loop": false,
"name": &"interact_right",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro0t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nn5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvwax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3qp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76i7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mndc6")
}],
"loop": false,
"name": &"interact_up",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsi7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvsjc")
}],
"loop": true,
"name": &"run_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agngo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrixf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmt83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4as6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1r6t")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0asu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq1a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu4mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk6la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrxk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg1p0")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2u8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv10x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdxpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b437")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nyu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_priom")
}],
"loop": true,
"name": &"run_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p0vlq"]
radius = 16.0
height = 32.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("movement_component", "animation_component", "input_component")]
collision_layer = 7
script = ExtResource("1_mdl7e")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
input_component = NodePath("InputComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_lt3gi")
animation = &"interact_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 32)
shape = SubResource("CapsuleShape2D_p0vlq")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3_qu4a1")
speed = 200.0
metadata/_custom_type_script = "uid://bq0us0ee8mi4e"

[node name="InputComponent" type="Node" parent="."]
script = ExtResource("4_70d11")
metadata/_custom_type_script = "uid://ccfn1s3bwoan5"

[node name="AnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_qu4a1")
sprite = NodePath("../AnimatedSprite2D")
metadata/_custom_type_script = "uid://b58a5mkblegvr"
